--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,6 @@
 @tailwind utilities;
 
 
+.gradient-overlay {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0));
+  }
